removed email id

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-MAINTAINER Vishvas <vishvass@hcl.com>
+MAINTAINER Vishvas
 ADD maven/cmdemo-0.0.1-SNAPSHOT.jar cmdemo.jar
 RUN sh -c 'touch /cmdemo.jar'
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/cmdemo.jar"]
